# bb-team-archiver

./: .gitignore  README.md  pyproject.toml  run.py
.github/workflows/: build.yml
bb_archive/: __main__.py  cli.py  fetcher.py  html_gen.py  image_dl.py  models.py  parser.py  webui.py
