[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "bb-archive"
version = "0.1.0"
description = "Archive BB-Team forum threads for offline reading"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "lxml>=4.9",
]

[project.scripts]
bb-archive = "bb_archive.cli:main"
